# qt-cd-paranoia

./: CMakeLists.txt  Page1.qml  Page1Form.ui.qml  README.md  cd_error_qt.cpp  cd_error_qt.hpp  cdda_info.cpp  cdda_info.hpp  cddb_qt.cpp  cddb_qt.hpp  cdio_hwinfo_wrap.cpp  cdio_hwinfo_wrap.hpp  cdio_qt.cpp  cdio_qt.hpp  cdparanoia_wav_qt.cpp  cdparanoia_wav_qt.hpp  error_logging.hpp  main.cpp  main.qml  qml.qrc  qt-cd-paranoia-0.1.1.dmg  qtcdparanoia.cpp  qtcdparanoia.hpp  stylesheet.css  trim.cpp
images/: if_cdaudio_unmount_18274.icns
release/osx/: DS_store.in  Info.plist.in
